[gd_scene load_steps=15 format=2]

[ext_resource path="res://Img/RostoFundo.png" type="Texture" id=1]
[ext_resource path="res://Scripts/HomeDiro.gd" type="Script" id=2]
[ext_resource path="res://Cenas/Estatus.tscn" type="PackedScene" id=3]
[ext_resource path="res://Img/Ovos/OVO-BLUE.png" type="Texture" id=4]
[ext_resource path="res://Img/Ovos/OVO-VERDE.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "aparecendo"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Aparecendo"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Sumindo"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="HomeDiro" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 160.0
margin_bottom = 288.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RostoFundo" type="Sprite" parent="."]
position = Vector2( 80, 160 )
texture = ExtResource( 1 )

[node name="transição" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="transição"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="AnimacaoTransicao" type="AnimationPlayer" parent="transição/ColorRect"]
autoplay = "Entrando"
anims/Entrando = SubResource( 1 )
anims/Saindo = SubResource( 2 )

[node name="Estatus" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Estatus"]
anims/aparecendo = SubResource( 3 )

[node name="Ovos" type="Node" parent="."]

[node name="OVO-BLUE" type="Sprite" parent="Ovos"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 80, 152 )
scale = Vector2( 2.625, 2.625 )
texture = ExtResource( 4 )
vframes = 2

[node name="AnimationOvoAzul" type="AnimationPlayer" parent="Ovos/OVO-BLUE"]
anims/Aparecendo = SubResource( 4 )
anims/Sumindo = SubResource( 5 )
anims/mexendo = SubResource( 6 )

[node name="OVO-VERDE" type="Sprite" parent="Ovos"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 80, 152 )
scale = Vector2( 2.625, 2.625 )
texture = ExtResource( 5 )
vframes = 2
frame = 1

[node name="AnimationOvoVerde" type="AnimationPlayer" parent="Ovos/OVO-VERDE"]
anims/Aparecendo = SubResource( 7 )
anims/Sumindo = SubResource( 8 )
anims/mexendo = SubResource( 9 )

[connection signal="animation_finished" from="transição/ColorRect/AnimacaoTransicao" to="." method="_on_AnimacaoTransicao_animation_finished"]
[connection signal="animation_finished" from="Estatus/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="Ovos/OVO-BLUE/AnimationOvoAzul" to="." method="_on_AnimationOvoAzul_animation_finished"]
[connection signal="animation_finished" from="Ovos/OVO-VERDE/AnimationOvoVerde" to="." method="_on_AnimationOvoVerde_animation_finished"]
